tests/ui/typeck/nonexistent-field-not-ambiguous.stderr
error[E0412]: cannot find type `MissingType` in this scope
  --> $DIR/nonexistent-field-not-ambiguous.rs:2:10
   |
LL |     val: MissingType,
   |          ^^^^^^^^^^^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0412`.
