tests/ui/typeck/nonexistent-field-not-ambiguous.rs
struct Foo {
    val: MissingType,
    //~^ ERROR cannot find type `MissingType` in this scope
}

fn main() {
    Foo { val: Default::default() };
}
